style.css
/* RESET CSS */
html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
}

/* CUSTOM CSS */
@import url("https://fonts.cdnfonts.com/css/getboreg-trial-only");

header {
  width: 100%;
}

body {
  color: #3e3e3e;
  font-family: "Getboreg Trial Only", sans-serif;
  font-size: 1.1rem;
}

.orange {
  color: #f86f03;
}

.gray {
  color: #717171;
}

.grayLight {
  color: #b6b6b6;
}

.search:focus {
  outline: none;
}

.product {
  width: 48%;
  display: flex;
  font-size: 0.9rem;
  padding: 1rem;
  box-shadow: #d7d7d7 0 0 0.4rem;
  border-radius: 0.8rem;
  gap: 0.3em;
}

.product img {
  width: 40%;
  object-fit: contain;
}

.product > div > p:first-child,
.product > div > p:last-child {
  font-weight: bold;
}

.product > div > p:nth-child(2) {
  color: #717171;
  font-size: 0.8rem;
  margin: 0.5rem 0;
}

#categories,
footer {
  font-size: 0.9rem;
}

#categories li svg,
#settings svg {
  opacity: 0.4;
  transition-duration: 0.4s;
}

#categories li:hover svg,
#settings svg:hover {
  opacity: 1;
}

footer li,
#socialMedia svg {
  cursor: pointer;
  margin: 0.3em 0;
  opacity: 0.7;
}

footer li:hover,
#socialMedia svg:hover {
  opacity: 0.9;
  transition-duration: 0.4s;
}

#socialMedia svg {
  width: 2em;
}

